[package]
name = "vmnet"
version = "0.5.0"
authors = ["Nikolay Edigaryev <edigaryev@gmail.com>"]
license = "MIT"
description = "Apple's vmnet.framework bindings"
documentation = "https://docs.rs/vmnet"
repository = "https://github.com/edigaryev/vmnet"
readme = "README.md"
keywords = ["macos"]
categories = ["os::macos-apis"]
edition = "2021"

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"

[workspace]
members = ["vmnet-derive"]

[dev-dependencies]
smoltcp = "0.8.1"

[dependencies]
libc = "0.2.126"
block = "0.1.6"
uuid = { version = "1.1.1", features = ["v4"] }
hexdump = "0.1.1"
lazy_static = "1.4.0"
bitflags = "1.3.2"
num_enum = "0.5.7"
thiserror = "1.0.31"
enum-iterator = "1.1.1"
vmnet-derive = { version = "0.5.0", path = "./vmnet-derive" }
