[package]
name = "vmnet"
version = "0.5.1"
authors = ["Nikolay Edigaryev <edigaryev@gmail.com>"]
license = "MIT"
description = "Apple's vmnet.framework bindings"
documentation = "https://docs.rs/vmnet"
repository = "https://github.com/edigaryev/vmnet"
readme = "README.md"
keywords = ["macos"]
categories = ["os::macos-apis"]
edition = "2021"

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"

[workspace]
members = ["vmnet-derive"]

[dev-dependencies]
smoltcp = "0.12.0"

[dependencies]
libc = "0.2.126"
block = "0.1.6"
uuid = { version = "1.1.1", features = ["v4"] }
hexdump = "0.1.1"
lazy_static = "1.4.0"
bitflags = "2.10.0"
num_enum = "0.7.5"
thiserror = "2.0.17"
enum-iterator = "2.3.0"
vmnet-derive = { version = "0.5.1", path = "./vmnet-derive" }
serial_test = "3.4.0"
