[package]
name = "vmnet-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
proc-macro2 = "1.0.39"
quote = "1.0.18"
darling = "0.14.1"
