[package]
name = "vmnet-derive"
version = "0.5.1"
authors = ["Nikolay Edigaryev <edigaryev@gmail.com>"]
license = "MIT"
description = "Helper procedural macro for the vmnet crate"
repository = "https://github.com/edigaryev/vmnet"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
proc-macro2 = "1.0.39"
quote = "1.0.18"
darling = "0.14.1"
